force-app/main/default/objects/InvoiceLine/InvoiceLine.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>