force-app/main/default/objects/InvoiceLine/fields/EAN__c.field-meta.xml
<CustomField>
    <fullName>EAN__c</fullName>
    <label>EAN</label>
    <length>35</length>
    <type>Text</type>
</CustomField>