force-app/main/default/objects/InvoiceLine/fields/EligibleForDiscount__c.field-meta.xml
<CustomField>
    <fullName>EligibleForDiscount__c</fullName>
    <label>Eligible for Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>