force-app/main/default/objects/InvoiceLine/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <label>Factory</label>
    <length>4</length>
    <type>Text</type>
</CustomField>