force-app/main/default/objects/InvoiceLine/fields/InternalInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InternalInvoiceNumber__c</fullName>
    <label>Internal Invoice Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>