force-app/main/default/objects/InvoiceLine/fields/OrderCreationDate__c.field-meta.xml
<CustomField>
    <fullName>OrderCreationDate__c</fullName>
    <label>Order Creation Date</label>
    <type>Date</type>
</CustomField>