force-app/main/default/objects/InvoiceLine/fields/OrderDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDate__c</fullName>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>