force-app/main/default/objects/InvoiceLine/fields/PositionNumber__c.field-meta.xml
<CustomField>
    <fullName>PositionNumber__c</fullName>
    <label>Position Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>