force-app/main/default/objects/InvoiceLine/fields/PriceDate__c.field-meta.xml
<CustomField>
    <fullName>PriceDate__c</fullName>
    <label>Price Date</label>
    <type>Date</type>
</CustomField>