force-app/main/default/objects/InvoiceLine/fields/PriorDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>PriorDocumentNumber__c</fullName>
    <label>Prior Document Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>