force-app/main/default/objects/InvoiceLine/fields/ServiceProvisionDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceProvisionDate__c</fullName>
    <label>Service Provision Date</label>
    <type>Date</type>
</CustomField>