force-app/main/default/objects/InvoiceLine/fields/TaxDeterminationDate__c.field-meta.xml
<CustomField>
    <fullName>TaxDeterminationDate__c</fullName>
    <label>Tax Determination Date</label>
    <type>Date</type>
</CustomField>