force-app/main/default/objects/InvoiceLine/fields/WeightUnit__c.field-meta.xml
<CustomField>
    <fullName>WeightUnit__c</fullName>
    <label>Weight Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>